made some changes m8

--- a/CarLinks.html
+++ b/CarLinks.html
@@ -9,6 +9,7 @@
 <header>
 	<nav>
 		<h1>WRX club</h1>
+		<h2>Scotts text</h2>
 		<ul>
 			<li><a href="CarLinks.html">Home</a></li>
 			<li><a href="blog.html">blog</a></li>
